umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@indigo_0012_[O-,S-,Se-,Te-_1][O+_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
basic_opensmiles:
  success: false
  error:
    error_type: InvalidBracket
    message: Invalid bracket at position 3
opensmiles:
  success: false
  error:
    error_type: InvalidBracket
    message: Invalid bracket at position 3
